--- a/src/app/notification/notification.html
+++ b/src/app/notification/notification.html
@@ -8,8 +8,8 @@
     <div class="card">
         <h1>{{x.title}} from {{x.createdby.username}}</h1>
         <div class="buttonDiv">
-            <button (click)="accept(x._id)">ACCEPT INVITATION</button>
-            <button (click)="reject(x._id)">REJECT INVITATION</button>
+            <button class="primary-cta-sheen" (click)="accept(x._id)">ACCEPT INVITATION</button>
+            <button class="secondary-button" (click)="reject(x._id)">REJECT INVITATION</button>
         </div>
     </div>
     }
