--- a/src/app/add-objective/add-objective.html
+++ b/src/app/add-objective/add-objective.html
@@ -1,63 +1,16 @@
 <div class="formDiv">
   <form
-  tuiAppearance="floating"
-  tuiCardLarge
-  tuiForm="m"
+  class="custom-form"
   [formGroup]="form"
-  [style.max-width.rem]="32"
   (submit)="onSubmit()"
   >
-  <tui-textfield>
-    <label tuiLabel>title</label>
-    <input placeholder="john.wick" appearance="primary" class="formInput" id="title" name="title" formControlName="title" type="text" tuiTextfield />
-  </tui-textfield>
-  <!-- <tui-textfield
-  multi
-  [style.width.rem]="15"
-  [tuiTextfieldCleaner]="false"
-  >
-  <label tuiLabel>members</label>
-  <input
-  tuiInputChip
-  formControlName="members"
-  />
-  <button
-  appearance="icon"
-  iconStart="@tui.x"
-  size="m"
-  tuiIconButton
-  type="button"
-  (click)="form.get('members')?.setValue(this.members)"
-  >
-  Clear
-</button>
-<tui-input-chip *tuiItem />
-</tui-textfield>
-<tui-textfield
-multi
-[style.width.rem]="15"
-[tuiTextfieldCleaner]="false"
->
-<label tuiLabel>tasks</label>
-<input
-tuiInputChip
-formControlName="tasks"
-/>
-<button
-appearance="icon"
-iconStart="@tui.x"
-size="m"
-tuiIconButton
-type="button"
-(click)="form.get('tasks')?.setValue(this.tasks)"
->
-Clear
-</button>
-<tui-input-chip *tuiItem />
-</tui-textfield> -->
+  <div class="form-group">
+    <label for="title" class="custom-label">title</label>
+    <input placeholder="john.wick" class="formInput" id="title" name="title" formControlName="title" type="text" />
+  </div>
 
 <footer>
-  <button tuiButton class="formButton" type="submit" >Add Objective</button>
+  <button class="formButton" type="submit" >Add Objective</button>
 </footer>
 </form>
 </div>
