--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,6 @@
-<!-- <tui-root data-tui-theme="dark"> -->
-<tui-root>
+<div class="app-container">
     <app-navbar></app-navbar>
-    <div style="width: 100%;height: 100%;display: flex;justify-content: center; align-items: center;">
-        <div style="width: 100%;height: 100%;">
-            <router-outlet />
-        </div>
+    <div class="main-content">
+        <router-outlet />
     </div>
-</tui-root>
+</div>
