--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,106 +1,27 @@
-<header tuiNavigationHeader>
-    <hr />
+<header class="custom-navbar">
+  <div class="navbar-greeting">
     @if(isAllPage){
     <h1>Welcome back</h1>
     }
-    @if(login){
-    <button (click) = "invitations()" appearance="primary" tuiButton type="button" class="navButton" routerLink="all">
-        invitations
-    </button>
-        <button appearance="primary" tuiButton type="button" class="navButton" routerLink="all">
-        all
-    </button>
-    <button appearance="primary" tuiButton type="button" class="navButton" style="color: white;">
-        <tui-avatar size="xs"
-            src="https://p7.hiclipart.com/preview/536/822/499/giant-panda-bear-red-panda-telus-customer-service-bear.jpg" />
-        {{username}}
-    </button>
-    }@else {
-    <button appearance="primary" tuiButton type="button" class="navButton" routerLink="register">
-        register
-    </button>
-    <button appearance="primary" tuiButton type="button" class="navButton" routerLink="login">
-        login
-    </button>
-    }
+  </div>
 
-
+  @if(login){
+  <button (click)="invitations()" type="button" class="navButton primary-cta-sheen" routerLink="all">
+    invitations
+  </button>
+  <button type="button" class="navButton primary-cta-sheen" routerLink="all">
+    all
+  </button>
+  <button type="button" class="navButton primary-cta-sheen user-avatar-button">
+    <img class="user-avatar" src="https://p7.hiclipart.com/preview/536/822/499/giant-panda-bear-red-panda-telus-customer-service-bear.jpg" alt="User Avatar" />
+    {{username}}
+  </button>
+  }@else {
+  <button type="button" class="navButton primary-cta-sheen" routerLink="register">
+    register
+  </button>
+  <button type="button" class="navButton primary-cta-sheen" routerLink="login">
+    login
+  </button>
+  }
 </header>
-<!-- <div [style.display]="'flex'">
-    <aside [style.height.rem]="27" [tuiNavigationAside]="expanded()">
-        <header>
-            <button iconStart="@tui.home" tuiAsideItem type="button">
-                <span tuiFade>A very very long product name</span>
-            </button>
-        </header>
-        <button iconStart="@tui.search" tuiAsideItem type="button">
-            Search
-
-            <ng-container *ngIf="expanded()">
-                <tui-badge appearance="accent">12</tui-badge>
-            </ng-container>
-        </button>
-        <a iconStart="@tui.users" tuiAsideItem [routerLink]="routes.Navigation">
-            Groups
-        </a>
-        <tui-aside-group>
-            <button automation-id="setting" iconStart="@tui.settings" tuiAsideItem tuiChevron type="button">
-                Settings
-                <ng-template>
-                    <button tuiAsideItem type="button">
-                        Account
-                    </button>
-                    <button tuiAsideItem type="button">
-                        Notifications
-                    </button>
-                    <button tuiAsideItem type="button">
-                        Privacy
-                    </button>
-                </ng-template>
-            </button>
-        </tui-aside-group>
-        <button automation-id="hint" iconStart="@tui.heart" tuiAsideItem type="button">
-            <span tuiFade>By default ellipsis is used but you can use fade too</span>
-        </button>
-        <button iconEnd="@tui.chevron-right" iconStart="@tui.ellipsis" tuiAsideItem tuiDropdownHover tuiDropdownOpen
-            type="button" [tuiDropdown]="more">
-            More
-            <ng-template #more let-close>
-                <tui-data-list tuiDataListDropdownManager>
-                    <button iconStart="@tui.pencil" tuiAsideItem type="button">
-                        Write
-                    </button>
-                    <button iconStart="@tui.pie-chart" tuiAsideItem type="button" [tuiDropdown]="submenu">
-                        Categories
-                        <ng-template #submenu>
-                            <tui-data-list>
-                                <button tuiAsideItem type="button" (click)="close()">
-                                    Fiction (will close menu)
-                                </button>
-                                <button tuiAsideItem type="button">
-                                    Non-Fiction
-                                </button>
-                                <button tuiAsideItem type="button">
-                                    Children
-                                </button>
-                            </tui-data-list>
-                        </ng-template>
-                    </button>
-                </tui-data-list>
-            </ng-template>
-        </button>
-        <hr />
-        <button iconStart="@tui.plus" tuiAsideItem type="button">
-            Add
-        </button>
-        <footer>
-            <button iconStart="@tui.star" tuiAsideItem type="button">
-                Favorites
-            </button>
-            <button tuiAsideItem type="button" [iconStart]="expanded() ? '@tui.chevron-left' : '@tui.chevron-right'"
-                (click)="handleToggle()">
-                {{ expanded() ? 'Collapse' : 'Expand' }}
-            </button>
-        </footer>
-    </aside>
-</div> -->
