--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;500;600;700&display=swap');
+
+@import url("./app/theme.css");
+
 /* You can add global styles to this file, and also import other style files */
